# flight-route-planner

./: .gitignore  .pylintrc  README.md  flight_route_planner.py  main.py  pyproject.toml  run_checks.sh
.github/workflows/: lint_and_test.yml
flight_route_planner/: dijkstra.py  flight_routes.py  flights.py  graphs.py
flights_data/: airports.json  flights.json
tests/: test_dijkstra.py  test_flight_routes.py  test_flights.py  test_graph.py
