[tool.poetry]
name = "flight-route-planner"
version = "0.1.0"
description = ""
authors = ["guseva-sofya <guseva.sofya.p@gmail.com>"]
readme = "README.md"
packages = [{include = "flight_route_planner"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
mypy = "^1.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
